--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;800&family=Work+Sans:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;800&family=Work+Sans&display=swap");
 
-html,body{
+html,
+body {
   margin: 0;
   padding: 0;
   background: #05101c;
   color: white;
   font-family: "Roboto Slab", serif;
 }
-.image-inverted{
-  filter: invert(1);
+
+.image-inverted {
+  filter: invert(100%);
 }
-.nav-link{
+.nav-link {
   font-weight: 600;
   text-transform: uppercase;
   margin-right: 10px;
@@ -19,4 +21,21 @@ html,body{
   border-radius: 10px;
   text-decoration: none;
   letter-spacing: 1px;
+}
+.MuiOutlinedInput-input-root.Mui-focused,
+.MuiOutlinedInput-notchedOutline {
+  border-color: white !important;
+}
+
+.rotate {
+  animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
